# libinput

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: main  main.c
include/: input.h  libinput-history.h  libinput.h
include/libinput/: highlight.h  history.h  regex.h  unix.h  windows.h
src/: getch.c  highlight.c  history.c  io.c  read_input.c  regex.c  regexp.c  utils.c
